--- a/style.css
+++ b/style.css
@@ -5,20 +5,28 @@
     background-color: rgba(0, 0, 0, 0.89);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
-    padding: 10px 0px 0px 10px;   
-    margin-bottom: 50px;
-    display: flex;
+    height: 150px;
+    padding: 10px;   
+    margin-bottom: 10px;
+    
  }
  
  /* html horarios*/
 .tabla{
-    background-color: rgb(136, 191, 241);
+    background-color: rgb(0, 0, 0);
+    padding: 20px;
+    margin: 20px;
+    border-width: 5px;
+    border-style: double;
+    border-color: rgba(7, 7, 7, 0.842);
 }
 
 .titulo-tabla{
     font-size: 25px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: black;
+    color: white;
+    border-width: 2px;
+    border-color: white;
     text-align: center;
 }
     
@@ -26,11 +34,17 @@
     font-size: 22px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
-    color: rgb(209, 84, 11);}
+    color: white;
+    border-width: 2px;
+    border-color: white;
+padding: 5px;}
 
 .hora{
     font-style: italic;
-    color: rgb(209, 84, 11);}
+    color: white;
+    border-width: 2px;
+    border-color: white;
+padding: 5px;}
 
 
       /*estilo body*/
@@ -43,16 +57,18 @@ body{
 .formulario{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif    ;
     margin: 5px;
-}
-.datos{
-    border-width: 25px;
-    border-color: black;
+    border-style: outset;
+    border-bottom-color: rgba(23, 23, 179, 0.89);
+    border-right-color:rgba(23, 23, 179, 0.89) ;
+    padding-bottom: 10px;
 }
 
 .footer{
     background-color: rgba(0, 0, 0, 0.89);
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 20px 20px 20px 20px;
-    margin-top: 10px;
+    font-size: 10px;
+    text-align: right;
+    height: 60px;
+    
 }
